{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 75,
  "lineage": "4a251d73-0a2c-aa1e-9e68-d72857653780",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "test-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:379649769308:route-table/rtb-02151399e7634e7fc",
            "default_route_table_id": "rtb-02151399e7634e7fc",
            "id": "rtb-02151399e7634e7fc",
            "owner_id": "379649769308",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08176c3ba485f3007",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "default": "route1"
            },
            "tags_all": {
              "default": "route1"
            },
            "timeouts": null,
            "vpc_id": "vpc-025145c0d6b94fdbb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.test-igw",
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "lb-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:379649769308:loadbalancer/terra-elb",
            "availability_zones": [
              "ap-northeast-1c",
              "ap-northeast-1d"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 200,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "terra-elb-171591145.ap-northeast-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "http:80/index.html",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "terra-elb",
            "idle_timeout": 100,
            "instances": [
              "i-04cd76f6e2354b516",
              "i-08a8f14c3ae121755",
              "i-0e382c4c82ac615b8"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "terra-elb",
            "region": "ap-northeast-1",
            "security_groups": [
              "sg-0dc0a236ef8a5a994"
            ],
            "source_security_group": "379649769308/sg",
            "source_security_group_id": "sg-0dc0a236ef8a5a994",
            "subnets": [
              "subnet-0313b9909bbaabc38",
              "subnet-037d5233472cd90fc"
            ],
            "zone_id": "Z14GRHDCWA56QT"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:379649769308:internet-gateway/igw-08176c3ba485f3007",
            "id": "igw-08176c3ba485f3007",
            "owner_id": "379649769308",
            "region": "ap-northeast-1",
            "tags": {
              "default": "test-igw"
            },
            "tags_all": {
              "default": "test-igw"
            },
            "vpc_id": "vpc-025145c0d6b94fdbb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07499b1dd2603498f",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-02151399e7634e7fc",
            "subnet_id": "subnet-037d5233472cd90fc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_default_route_table.test-rt",
            "aws_internet_gateway.test-igw",
            "aws_subnet.subnet1",
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a01e2e8f97779b5d",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-02151399e7634e7fc",
            "subnet_id": "subnet-0313b9909bbaabc38"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_default_route_table.test-rt",
            "aws_internet_gateway.test-igw",
            "aws_subnet.subnet2",
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:379649769308:security-group/sg-0dc0a236ef8a5a994",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dc0a236ef8a5a994",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg",
            "name_prefix": "",
            "owner_id": "379649769308",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "default": "sg"
            },
            "tags_all": {
              "default": "sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-025145c0d6b94fdbb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "379649769308",
            "id": "sg-0dc0a236ef8a5a994",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:379649769308:subnet/subnet-037d5233472cd90fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-037d5233472cd90fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "379649769308",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "default": "subnet1"
            },
            "tags_all": {
              "default": "subnet1"
            },
            "vpc_id": "vpc-025145c0d6b94fdbb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "379649769308",
            "id": "subnet-037d5233472cd90fc",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:379649769308:subnet/subnet-0313b9909bbaabc38",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0313b9909bbaabc38",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "379649769308",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "default": "subnet2"
            },
            "tags_all": {
              "default": "subnet2"
            },
            "vpc_id": "vpc-025145c0d6b94fdbb"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "cidr_block"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "379649769308",
            "id": "subnet-0313b9909bbaabc38",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:379649769308:vpc/vpc-025145c0d6b94fdbb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/20",
            "default_network_acl_id": "acl-0bdcc52226d380f2d",
            "default_route_table_id": "rtb-02151399e7634e7fc",
            "default_security_group_id": "sg-04822c64aef111494",
            "dhcp_options_id": "dopt-0b51efeacae35a3a4",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-025145c0d6b94fdbb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02151399e7634e7fc",
            "owner_id": "379649769308",
            "region": "ap-northeast-1",
            "tags": {
              "default": "test-vpc"
            },
            "tags_all": {
              "default": "test-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}